# whisprlinux

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  whisperlinux.service
packaging/: build-release.sh  install-online.sh  setup-venv.sh  usr-bin-whisperlinux  whisperlinux.desktop  whisperlinux.service
website/: index.html  install.sh
website/downloads/: whisperlinux_1.0.0_amd64.deb
whisperlinux/: checks.py  cli.py  config.py  hotkey.py  injector.py  main.py  recorder.py  transcriber.py  tray.py
